[package]
edition = "2021"
name = "colour-extractor-buffered"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clustering = "0.2.1"
image = "0.25.1"
itertools = "0.12.1"
lab = "0.11.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.3", default-features = false, features = ["napi6"] }
napi-derive = "2.16.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
